--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>简创AIGC服务平台 - 领先的人工智能服务提供商</title>
+    <title>简创AIGC服务平台 - 404</title>
     <meta
       name="description"
       content="简创AIGC提供领先的人工智能服务，包括API密钥获取、技术支持、开发文档等，赋能开发者与创新企业开启智能应用新时代"
@@ -80,6 +80,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="./asset/style.css" />
+    <style>
+      header {
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <!-- 科技网格背景 -->
@@ -96,20 +101,9 @@
 
     <div class="container" id="mainContainer">
       <header>
-        <div class="logo">人工智能服务平台</div>
-        <p class="subtitle">
-          领先的人工智能服务，赋能开发者与创新企业，开启智能应用新时代
-        </p>
-
-        <div class="breadcrumb">
-          <a href="#">扣子工作流定制服务</a>
-          <span>/</span>
-          <a href="#">视频编辑插件私有化部署</a>
-          <span>/</span>
-          <a href="#">视频分发</a>
-          <span>/</span>
-          <a href="#">扣子插件APIKey</a>
-        </div>
+        <div class="error-code error-animation">404</div>
+        <p class="subtitle">抱歉，您访问的资源不存在或已被移除。</p>
+        <a href="/" class="btn"> <i class="fas fa-home"></i> 返回首页 </a>
       </header>
 
       <div class="cards-container">
